--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "brut",
+  "name": "pal",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,10 +11,15 @@
   "dependencies": {
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-in-viewport": "^1.0.0-alpha.28",
+    "react-typed": "^1.2.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.12",
     "eslint": "8.23.1",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
